app/static/style.css
/* ... */
a:hover, a:focus {
    color: var(--link-hover-color);
    text-decoration: none;
}


h1, h2, h3, h4 {
    font-family: "Lexend Deca", serif;
}

.heading {
    font-size: 3.3rem;
}

.heading-sans-serif {
    font-family: 'Lexend Deca', sans-serif;
}

.subheading {
    font-family: 'Lexend Deca', sans-serif;
    font-size: 1.4rem;
    font-weight: 400;
}

/* ====================
 FLASH MESSAGE STYLES
======================= */

.info {
    color:  hsla(160, 36%, 28%, 1);
    background: hsla(160, 36%, 88%, 1);
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
}

.error, .message {
    color:  hsla(3, 56%, 39%, 1);
    background: hsla(3, 56%, 49%, 0.3);
    position: relative;
    padding: .75rem 1.25rem;
    margin-bottom: 1rem;
}

/* ====================
 BUTTON & LINK STYLES
======================= */
.btn {
    border: unset;
    cursor: pointer;
}

.btn-form {
    border: none;
    width: 100%;
    background: var(--black);
}

.btn-form:hover, .btn-form:focus {
    background: var(--bg-dark);
    color: #FFF;
}

.btn-edit {
    background-color: var(--btn-edit);
    color: var(--black);
}

.btn-edit:hover, .btn-edit:focus {
    background-color: var(--btn-edit-hover);
}

.btn-details {
    background-color: var(--btn-details);
    color: var(--black); 
}

.btn-details:hover, .btn-details:focus {
    background-color: var(--btn-details-hover);
}

.btn-delete {
    background-color: var(--btn-delete);
    color: var(--black);
}

.btn-delete:hover, .btn-delete:focus {
    background-color: var(--btn-delete-hover);
}

.btn--dark {
    background: var(--black);
    color: #FFF;
    border: 2px solid var(--black);
    font-weight: 700;
}

.btn--dark:hover, .btn--dark:focus {
    background: #FFF;
    color: var(--black);
}

.btn--bright {
    background: var(--btn-bright);
    color: #FFF;
    font-weight: 700;
}

.btn--bright:hover, .btn--bright:focus {
    background: var(--btn-bright-hover);
    color: #FFF;
}

.btn-back {
    display: block;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.02em;
}

/* ====================
 CUSTOM CHECKBOX STYLING
======================= */

.checkbox {
    display: inline-flex;
    align-items: center;
    cursor: pointer;
    margin: 1em 0 1.5em 0;
}

.checkbox__input {
    display: none;
}

.checkbox__box {
    width: 1.25em;
    height: 1.25em;
    border: 2px solid #ced4da;
    border-radius: 3px;
    display: flex;
    align-items: center;
    margin-right: 0.8em;
    justify-content: center;
    flex-shrink: 0;
    transition: background 150ms, border-color 150ms;
}

.checkbox__box::after {
    content: '\2714';
    color: #FFF;
    transform: scale(0); /* initially at 0% scale */
    transition: transform 150ms;
} 

/* when checkbox input is checked it will select checkbox__box element (sibling after checkbox) */
.checkbox__input:checked + .checkbox__box {
    background: var(--highlight-color);
    border-color: var(--highlight-color);
    transition: background 150ms, border-color 150ms;
}

.checkbox__input:checked + .checkbox__box::after {
    transform: scale(1);
    transition: transform 150ms;
}

/* ====================
 HEADER & NAV 
======================= */
.header-main {
    /* border: 1px solid green; */
    position: relative;
}

/* custom navbar styles */
.navbar-custom {
    padding: 2.7em 1.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navbar-logo {
    text-align: center;
    line-height: 0.8em;
}

.navbar-logo-text {
    font-family: 'Zilla Slab', serif;
    font-size: 2.2rem;
    color: #131313;
}

.navbar-logo-text:hover, .navbar-logo:focus {
    color: #167973;
}

.navbar-icon {
    background: #131313;
    color: #131313;
    border: unset;
    background: unset;
    font-size: 2.3rem;
    /* border: 1px solid pink; */
}

.navbar-icon:hover, .navbar-icon:focus {
    color: var(--header-icon-hover-color);
}

.navbar-panel {
    position: absolute;
    z-index: 1;
    background: var(--bg-navbar);
    top: 0;
    left: 0;
    height: 100vh;
    padding: 1.2em 0.6em;
    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
    transform: translateX(-100%);
    transition: transform .3s ease-in-out;
}

.navbar-icon--close {
    font-size: 2em;
    padding: 0;
    margin-left: 0.6em;
}
.navbar-panel-logo {
    margin-top: 1.6em;
}

.navbar-panel-logo__text {
    display: block;
    font-family: 'Zilla Slab', serif;
    font-size: 2rem;
    color: var(--black);
    margin-left: 0.8em;
}

.navbar-panel-logo__text:hover {
    color: var(--black);
}

.navbar-list {
    margin-top: 4.75em;
    padding: 0;
    list-style-type: none;
}

.nav-item {
    margin-bottom: 0.3em;
}

.nav-item--link {
    display: block;
    width: 100%;
    padding: .6em 1.3em;
    color: var(--black);
    font-weight: 600;
    font-size: 1.125rem;
}

.nav-item--link:hover, .nav-item--link:focus {
    background: var(--btn-bg-color-light);
    color: var(--black);
    border-radius: 0.4em;
}

.menu-icon {
    font-size: 1.4em;
    margin-right: 1.125em;
}

.nav-link--sign {
    margin: 3.5em auto;
    text-align: center;
    background: var(--black);
    color: #FFF;
    border-radius: 0.4em;   
    border: 2px solid var(--black);
    width: 70%;
}

.nav-link--sign:hover, .nav-link--sign:focus {
    border: 2px solid var(--black);
    background: none;
}

.navbar__footer {
    text-align: center;
    margin-top: 5em;
    display: none;
}

.navbar__footer-link {
    /* color: var(--black); */
    color: var(--black);
}
/* ... */

